--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -7,7 +7,7 @@
   "rich-text": {
     "props": {
       "text": "**Hello, world!**",
-      "textPosition": "CENTER",
+      "textPosition": "RIGHT",
       "textAlignment": "RIGHT"
     }
   }
