--- a/store/blocks/shelf.jsonc
+++ b/store/blocks/shelf.jsonc
@@ -11,7 +11,7 @@
         "minItemsPerPage": 1,
         "scroll": "BY_PAGE",
         "arrows": true,
-        "titleText": "Top sellersSSS"
+        "titleText": "Top sellers"
       }
     }
   },
