--- a/store/blocks/slider-layout.jsonc
+++ b/store/blocks/slider-layout.jsonc
@@ -16,7 +16,7 @@
   },
   "image#brand1": {
     "props": {
-      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square1.png",
+      "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square1.png",
       "isFullModeStyle": true,
       "headline": "Black Friday",
       "callToActionText": "Subscribe",
@@ -25,7 +25,7 @@
   },
   "image#brand2": {
     "props": {
-      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square2.png",
+      "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square2.png",
       "isFullModeStyle": true,
       "headline": "Black Friday",
       "callToActionText": "Subscribe",
@@ -34,7 +34,7 @@
   },
   "image#brand3": {
     "props": {
-      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square3.png",
+      "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square3.png",
       "isFullModeStyle": true,
       "headline": "Black Friday",
       "callToActionText": "Subscribe",
@@ -43,7 +43,7 @@
   },
   "image#brand4": {
     "props": {
-      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square4.png",
+      "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square4.png",
       "isFullModeStyle": true,
       "headline": "Black Friday",
       "callToActionText": "Subscribe",
@@ -52,7 +52,7 @@
   },
   "image#brand5": {
     "props": {
-      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square5.png",
+      "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square5.png",
       "isFullModeStyle": true,
       "headline": "Black Friday",
       "callToActionText": "Subscribe",
@@ -61,7 +61,7 @@
   },
   "image#brand6": {
     "props": {
-      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square6.png",
+      "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square6.png",
       "isFullModeStyle": true,
       "headline": "Black Friday",
       "callToActionText": "Subscribe",
