--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -5,9 +5,7 @@
       "shelf",
       "slider-layout#home",
       "responsive-layout.desktop#desktop",
-      "responsive-layout.mobile#mobile",
-      "image#desktop",
-      "image#mobile"
+      "responsive-layout.mobile#mobile"      
     ]
   },
   "flex-layout.row":{
@@ -44,10 +42,10 @@
     }
   },
   "responsive-layout.desktop#desktop": {
-    "children": ["rich-text#desktop"]
+    "children": ["rich-text#desktop", "image#desktop"]
   },  
   "responsive-layout.mobile#mobile": {
-    "children": ["rich-text#mobile"]
+    "children": ["rich-text#mobile", "image#mobile"]
   },
   "rich-text#desktop": {
     "props": {
