--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -22,8 +22,9 @@
   "flex-layout.col#right": {
     "children": [
       "product-name",
+      "product-identifier.product",
       "product-price",
-      "flex-layput.row#qty-sku",
+      "flex-layout.row#qty-sku",
       "shipping-simulator"
     ],
     "props": {
