--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -4,30 +4,26 @@
   },
   "search-result-layout": {
     "blocks": [
-       "search-result-layout.desktop",
-       "search-result-layout.mobile",
-       "search-not-found-layout"
-    ]
- },
- "search-result-layout.desktop": {
-   "children": [
-    "breadcrumb.search",
-    "search-title.v2",
-    "search-fetch-previous",
-    "search-fetch-more"
-   ]
- },
- "flex-layout.row#top": {
-   "children": [
-     "total-products.v2",
-     "order-by.v2"
+      "search-result-layout.desktop",
+      "search-result-layout.mobile",
+      "search-not-found-layout"
     ]
   },
-  "flex-layout.row#results": {
+  "search-result-layout.desktop": {
     "children": [
-      "flex-layout.col#filter",
-      "flex-layout.col#search"
+      "breadcrumb.search",
+      "search-title.v2",
+      "flex-layout.row#top",
+      "search-fetch-previous",
+      "flex-layout.row#results",
+      "search-fetch-more"
     ]
+  },
+  "flex-layout.row#top": {
+    "children": ["total-products.v2", "order-by.v2"]
+  },
+  "flex-layout.row#results": {
+    "children": ["flex-layout.col#filter", "flex-layout.col#search"]
   },
   "flex-layout.col#filter": {
     "children": ["filter-navigator.v3"],
