--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -42,7 +42,7 @@
   },
   "tab-list.item#home2": {
     "props": {
-      "tabId": "electronic",
+      "tabId": "electronics",
       "label": "Electronics"
     }
   },
@@ -58,7 +58,7 @@
   "tab-content.item#home2": {
     "children": ["rich-text#home2"],
     "props": {
-      "tabId": "electronic"
+      "tabId": "electronics"
     }
   },
   "rich-text#home1": {
