--- a/store/blocks/footer.jsonc
+++ b/store/blocks/footer.jsonc
@@ -26,7 +26,11 @@
   },
   "accepted-payment-methods": {
     "props":{
-      "paymentMethods": ["mastercard", "visa", "diners club"],
+      "paymentMethods": [
+        "mastercard",
+        "visa",
+        "diners club"
+      ],
       "showInColor": true
     }
   },
